# interview_bold

./: README.md
Interview-Data-Test-main/: .env.example  .gitignore  README.md  check_env.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.sh
Interview-Data-Test-main/scripts/: Insert_data.py  dw_sql_server_setup.sql  etl_template.py  sql_server_setup.sql
